<resources>
    <string name="app_name">OxxoUi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="v_yaka_elbise">V Yaka Elbise</string>
    <string name="_18_yox_pollysbase">18 YOX - POLASBISE</string>
    <string name="_129_00_tl">129,00 TL</string>
    <string name="taksit">6x13,32 TLden başlayan taksit seçenekleri</string>
    <string name="white_button">white button</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="ss">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="kombini_tamamla">Kombini Tamamla</string>
    <string name="son_gezdiklerin">Son Gezdiklerin</string>
    <string name="al_veri_ini_500_tl_ye_tamamla_50_tl_kazan">Alışverişini 500 TL ye tamamla 50 TL kazan</string>
    <string name="_90_g_n_de_i_im_ve_iade">90 gün değişim ve iade</string>
    <string name="_7_24_g_venli_al_veri">7/24 güvenli alışveriş</string>
    <string name="taksit_se_enekleri">Taksit seçenekleri</string>
</resources>
