<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pelingulcinar.oxxoui.CustomViewPager
                android:id="@+id/viewPager_main"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/txtTitle"
                android:text="@string/v_yaka_elbise"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="30dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDesc"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="1dp"
                android:textSize="10sp"
                android:text="@string/_18_yox_pollysbase"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCost"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="3dp"
                android:text="@string/_129_00_tl"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCostDetail"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="1dp"
                android:textSize="10sp"
                android:text="@string/taksit"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnWhite"
                android:contentDescription="@string/white_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#FFFFFF"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"/>

                <ImageButton
                    android:id="@+id/btnBlack"
                    android:contentDescription="@string/white_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/buttonshape"
                    android:layout_marginLeft="15dp"
                    android:shadowColor="#FFFFFF"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginTop="30dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:fitsSystemWindows="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtXS"
                android:text="@string/xs"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtS"
                    android:text="@string/ss"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtM"
                    android:text="@string/m"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtL"
                    android:text="@string/l"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp" />

            </LinearLayout>

            <iammert.com.expandablelib.ExpandableLayout
                android:id="@+id/el"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:parentLayout="@layout/layout_parent"
                app:childLayout="@layout/layout_child"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtKombin"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:text="@string/kombini_tamamla"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <com.pelingulcinar.oxxoui.ExpandableHeightGridView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/gridView"
                android:columnWidth="150dp"
                android:horizontalSpacing="15dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="1dp"
                android:paddingTop="5dp"
                android:isScrollContainer="false">

            </com.pelingulcinar.oxxoui.ExpandableHeightGridView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSonGezdiklerin"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                android:text="@string/son_gezdiklerin"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="#efefef"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/giftb">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/gift"
                        android:text="@string/al_veri_ini_500_tl_ye_tamamla_50_tl_kazan"
                        android:textSize="10sp"
                        android:scaleType="fitXY"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/replay">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/replay">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/cycler"
                        android:text="@string/_90_g_n_de_i_im_ve_iade"
                        android:textSize="10sp"
                        android:scaleType="fitXY"
                        android:textColor="@android:color/black"
                        android:layout_below="@+id/replay"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/shield">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/security"
                        android:text="@string/_7_24_g_venli_al_veri"
                        android:textSize="10sp"
                        android:scaleType="fitXY"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/dollar">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/taksit"
                        android:text="@string/taksit_se_enekleri"
                        android:textSize="10sp"
                        android:scaleType="fitXY"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/shipped">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/bus"
                        android:text="100 TL ve üzeri alışverişlerde ücretsiz kargo"
                        android:textSize="10sp"
                        android:scaleType="fitXY"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>